# clodo

./: Cargo.toml  README.md  clodo.py  pyproject.toml  todos.json
.github/workflows/: release.yml
src/: main.rs  models.rs  storage.rs
