[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "clodo"
version = "0.1.3"
description = "A simple command-line todo manager written in Rust"
readme = "README.md"
authors = [{name = "FOBABS", email = "hi@fobabs.co"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
clodo = "clodo:run"

[tool.maturin]
module-name = "clodo"